--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
     <h2>Infinite Scroll</h2>
     <main>
       <ol id="infi-list"></ol>
+		<ul id="list"></ul>
     </main>
     <script src="./script.js"></script>
   </body>
